@@ -1,11 +1,10 @@
 import com.diffplug.spotless.LineEnding
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
     alias(libs.plugins.spotless)
 }
 
-subprojects {
+allprojects {
     group = "io.github.malczuuu.chimera"
 
     // In order to avoid hardcoding snapshot versions, version is derived from the current Git commit hash. For CI/CD
@@ -14,52 +13,6 @@ subprojects {
         version = getSnapshotVersion(rootProject.rootDir)
     }
 
-    // Configure Java 25 to all submodules that use java plugin.
-    pluginManager.withPlugin("java") {
-        configure<JavaPluginExtension> {
-            toolchain.languageVersion = JavaLanguageVersion.of(25)
-        }
-    }
-
-    // Usage:
-    //   ./gradlew printVersion
-    tasks.register("printVersion") {
-        description = "Prints the current project version to the console"
-        group = "help"
-        doLast {
-            println("${project.name} version: ${project.version}")
-        }
-    }
-
-    tasks.withType<JavaCompile>().configureEach {
-        options.encoding = "UTF-8"
-        options.compilerArgs.add("-parameters")
-    }
-
-    tasks.withType<Jar>().configureEach {
-        manifest {
-            attributes(mapOf("Implementation-Version" to project.version))
-        }
-    }
-
-    tasks.withType<Test>().configureEach {
-        useJUnitPlatform()
-
-        testLogging {
-            events("passed", "skipped", "failed", "standardOut", "standardError")
-            exceptionFormat = TestExceptionFormat.SHORT
-            showStandardStreams = true
-        }
-
-        // for resolving warnings from mockito
-        jvmArgs("-XX:+EnableDynamicAgentLoading")
-
-        systemProperty("user.language", "en")
-        systemProperty("user.country", "US")
-    }
-}
-
-allprojects {
     repositories {
         mavenCentral()
     }
@@ -106,5 +59,15 @@ spotless {
         ktlint("1.8.0").editorConfigOverride(mapOf("max_line_length" to "120"))
         endWithNewline()
         lineEndings = LineEnding.UNIX
+    }
+}
+
+// Usage:
+//   ./gradlew printVersion
+tasks.register("printVersion") {
+    description = "Prints the current project version to the console"
+    group = "help"
+    doLast {
+        println("${project.name} version: ${project.version}")
     }
 }
